responsive text align fix

--- a/scss/modules/_fonts.scss
+++ b/scss/modules/_fonts.scss
@@ -7,6 +7,7 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 h1 {
     font-size: 2em;
     font-weight: 700;
+    text-align: center;
 }
 
 p {
